--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,14 +4,21 @@ $color-black: #000;
 
 @font-face {
   font-family: 'Averta', sans-serif;
-  src: url('./fonts/AvertaStd-Regular.otf');
+  src: url('./fonts//Averta/AvertaStd-Regular.otf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
+  font-family: 'Averta Extra Thin', sans-serif;
+  src: url('./fonts//Averta/AvertaStd-Extrathin.otf');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Averta Light', sans-serif;
-  src: url('./fonts/AvertaStd-Light.otf');
+  src: url('./fonts/Averta/AvertaStd-Light.otf');
   font-weight: 250;
   font-style: normal;
 }
@@ -23,10 +30,27 @@ $color-black: #000;
   font-style: normal;
 }
 
-.lexend-deca-sans {
-  font-family: "Lexend Deca", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: normal;
+.be-vietnam-pro-extralight {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.be-vietnam-pro-regular {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.be-vietnam-pro-medium {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.be-vietnam-pro-bold {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 700;
   font-style: normal;
 }
 
@@ -99,7 +123,7 @@ $color-black: #000;
 
     .main {
       margin: 0 20px;
-      font-family: "Lexend Deca", sans-serif;
+      font-family: "Be Vietnam Pro", sans-serif;
 
       .main-title {
         font-size: 24px;
@@ -434,14 +458,14 @@ $color-black: #000;
 
             .section-title {
               div {
-                font-family: "Lexend Deca", sans-serif;
+                font-family: "Be Vietnam Pro", sans-serif;
                 font-size: 40px;
                 font-weight: 700;
               }
             }
 
             .section-regular {
-              font-family: "Lexend Deca", sans-serif;
+              font-family: "Be Vietnam Pro", sans-serif;
 
               .left {
                 font-weight: 400;
@@ -454,7 +478,7 @@ $color-black: #000;
             }
 
             .section-medium {
-              font-family: "Lexend Deca", sans-serif;
+              font-family: "Be Vietnam Pro", sans-serif;
 
               .left {
                 font-weight: 500;
@@ -467,7 +491,7 @@ $color-black: #000;
             }
 
             .section-bold {
-              font-family: "Lexend Deca", sans-serif;
+              font-family: "Be Vietnam Pro", sans-serif;
 
               .left {
                 font-weight: 700;
@@ -525,10 +549,12 @@ $color-black: #000;
     footer {
       background-color: #FFF9EB;
       padding-top: 100px;
-      font-family: "Averta Light", sans-serif;
-      font-weight: 250;
+      font-family: "Averta Extra Thin", sans-serif;
+      font-weight: 200px;
 
       .footer-container {
+        margin: auto;
+        padding: 0 15px;
         max-width: 1200px;
         display: flex;
         flex-direction: column;
@@ -537,7 +563,6 @@ $color-black: #000;
 
         .footer-title {
           font-size: 50px;
-          font-weight: 250;
           text-align: center;
         }
 
@@ -550,9 +575,103 @@ $color-black: #000;
         }
 
         .footer-contact {
+          font-size: 12px;
           background-color: #131032;
+          color: #fff;
           padding: 50px 35px 25px 35px;
           border-radius: 25px 25px 0 0;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          .footer-left {
+            width: 40%;
+
+            div {
+              margin-bottom: 40px;
+            }
+
+            .logo {
+              display: flex;
+              align-items: center;
+
+              h1 {
+                font-size: 1.8rem;
+              }
+            }
+
+            address {
+              font-style: normal;
+              margin-top: 10px;
+
+              a {
+                color: #fff;
+                text-decoration: none;
+
+                &:hover {
+                  text-decoration: underline;
+                }
+              }
+            }
+          }
+
+          .footer-right {
+            width: 60%;
+            font-size: 16px;
+
+            .footer-column {
+              flex: 1;
+              padding: 0 20px;
+
+              h2 {
+                margin-bottom: 15px;
+                font-size: 1.2rem;
+              }
+            }
+
+            ul {
+              list-style: none;
+
+              li {
+                margin-bottom: 10px;
+
+                a {
+                  color: #ffffff;
+                  text-decoration: none;
+
+                  &:hover {
+                    text-decoration: underline;
+                  }
+                }
+              }
+            }
+
+            .footer-column:last-child {
+              font-size: 12px;
+            }
+
+            .footer-top {
+              display: flex;
+              justify-content: flex-start;
+              margin-bottom: 20px;
+            }
+
+            .footer-bottom {
+              padding-left: 20px;
+
+              ul {
+                display: flex;
+                justify-content: flex-start;
+
+                li {
+                  margin-right: 38px;
+                }
+              }
+            }
+
+
+          }
+
         }
       }
     }
