--- a/assets/style.scss
+++ b/assets/style.scss
@@ -155,20 +155,20 @@ $color-black: #000;
             }
 
             .children-description {
-              font-weight: 300px;
+              // font-weight: 300;
               font-size: 16px;
             }
           }
 
           .section-right {
             width: 60%;
+            padding-left: 70px;
           }
         }
       }
 
       #logo {
         .section-right {
-          padding-left: 70px;
 
           .imgage {
             text-align: center;
@@ -210,7 +210,6 @@ $color-black: #000;
 
       #color {
         .section-right {
-          padding-left: 70px;
 
           .section-color {
             display: grid;
@@ -279,7 +278,6 @@ $color-black: #000;
         }
 
         .section-right {
-          padding-left: 70px;
 
           .imgage {
             text-align: center;
@@ -356,7 +354,6 @@ $color-black: #000;
         }
 
         .section-right {
-          padding-left: 70px;
 
           .imgage {
             text-align: center;
@@ -373,7 +370,6 @@ $color-black: #000;
       #typography {
         #header {
           .section-right {
-            padding-left: 70px;
 
             section {
               margin-bottom: 34px;
@@ -440,7 +436,6 @@ $color-black: #000;
 
         #text {
           .section-right {
-            padding-left: 70px;
 
             section {
               margin-bottom: 34px;
@@ -550,7 +545,7 @@ $color-black: #000;
       background-color: #FFF9EB;
       padding-top: 100px;
       font-family: "Averta Extra Thin", sans-serif;
-      font-weight: 200px;
+      font-weight: 200;
 
       .footer-container {
         margin: auto;
@@ -672,6 +667,49 @@ $color-black: #000;
 
           }
 
+        }
+      }
+    }
+
+    @media only screen and (max-width: 1200px) {
+      .main {
+
+        .section-parent {
+          margin: 0 auto;
+          // width: 780px;
+
+          .section-children {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            // align-items: ;
+            gap: 40px;
+
+            .section-left {
+              width: 100%;
+            }
+
+            .section-right {
+              width: 100%;
+              padding-left: 0;
+            }
+          }
+        }
+      }
+
+      footer {
+        .footer-container {
+
+          .footer-contact {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .footer-left,
+            .footer-right {
+              width: 100%;
+            }
+          }
         }
       }
     }
