--- a/assets/style.scss
+++ b/assets/style.scss
@@ -72,6 +72,8 @@ $color-black: #000;
   }
 }
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -92,6 +94,7 @@ $color-black: #000;
       background-color: $primary-color;
       width: 100%;
       position: sticky;
+      top: 0;
       z-index: 2;
       display: flex;
 
@@ -117,6 +120,60 @@ $color-black: #000;
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+        }
+
+        .header-menu-button {
+          display: none;
+          padding: 1rem;
+          background-color: inherit;
+          border: none;
+
+          img {
+            width: 150%;
+          }
+        }
+      }
+    }
+
+    .sidebar {
+      position: fixed;
+      background-color: $primary-color;
+      z-index: 4;
+      width: 0;
+      height: 100vh;
+      top: 0;
+      right: 0;
+      transition: 0.3s;
+
+      .sidebar-button {
+        background-color: inherit;
+        color: $color-white;
+        border: none;
+        width: 100%;
+        padding: 1rem;
+        font-size: 1.5rem;
+        text-align: left;
+
+        img {
+          width: 20%;
+        }
+      }
+
+      .sidebar-menu {
+        list-style: none;
+
+        .sidebar-link {
+          padding: 0.5rem 2rem;
+          width: 100%;
+          font-size: 1.5rem;
+
+          a {
+            color: $color-white;
+          }
+
+          a:hover {
+            color: $color-black;
+          }
         }
       }
     }
@@ -195,8 +252,8 @@ $color-black: #000;
 
           .second-row {
             display: flex;
-            justify-content: space-between;
-            margin-top: 30px;
+            justify-content: space-around;
+            margin-top: 40px;
             gap: 20px;
           }
 
@@ -213,8 +270,8 @@ $color-black: #000;
 
           .section-color {
             display: grid;
-            min-width: 580px;
-            min-height: 400px;
+            // min-width: 580px;
+            // min-height: 400px;
             grid-template-columns: auto auto;
           }
 
@@ -509,6 +566,7 @@ $color-black: #000;
       padding: 5px;
 
       .service-card {
+        background-color: white;
         padding: 5px;
         box-shadow: -2px 2px 2px #ddd;
         border: 0;
@@ -530,6 +588,10 @@ $color-black: #000;
           height: "35px";
         }
       }
+    }
+
+    .service-book-phone {
+      display: none;
     }
 
     .contact {
@@ -573,7 +635,7 @@ $color-black: #000;
           font-size: 12px;
           background-color: #131032;
           color: #fff;
-          padding: 50px 35px 25px 35px;
+          padding: 50px 35px 15px 35px;
           border-radius: 25px 25px 0 0;
           width: 100%;
           display: flex;
@@ -647,6 +709,7 @@ $color-black: #000;
 
             .footer-top {
               display: flex;
+              flex-wrap: wrap;
               justify-content: flex-start;
               margin-bottom: 20px;
             }
@@ -656,6 +719,7 @@ $color-black: #000;
 
               ul {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: flex-start;
 
                 li {
@@ -673,7 +737,6 @@ $color-black: #000;
 
     @media only screen and (max-width: 1200px) {
       .main {
-
         .section-parent {
           margin: 0 auto;
           // width: 780px;
@@ -691,7 +754,7 @@ $color-black: #000;
 
             .section-right {
               width: 100%;
-              padding-left: 0;
+              padding: 0 70px;
             }
           }
         }
@@ -710,6 +773,160 @@ $color-black: #000;
               width: 100%;
             }
           }
+        }
+      }
+    }
+
+    @media only screen and (max-width: 1024px) {
+      header {
+        nav {
+          display: flex;
+          justify-content: space-between;
+
+          .nav-menu {
+            position: static;
+            transform: none;
+          }
+        }
+      }
+    }
+
+    @media only screen and (max-width: 850px) {
+      .main {
+        .section-parent {
+          .section-children {
+            .section-right {
+              padding: 0;
+            }
+          }
+        }
+      }
+
+      footer {
+        .footer-container {
+          padding: 0;
+        }
+      }
+    }
+
+    @media only screen and (max-width: 670px) {
+      .service-book {
+        display: none;
+      }
+
+      .contact {
+        right: 10px;
+        left: 10px;
+        bottom: 80px;
+
+        img {
+          width: 60%;
+        }
+
+        .zalo {
+          text-align: right;
+        }
+      }
+
+      .service-book-phone {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        background-color: $color-white;
+        padding: 20px 0;
+
+        a {
+          text-decoration: none;
+          color: black;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+        }
+      }
+
+      header {
+        nav {
+          .nav-menu {
+            display: none;
+          }
+
+          .header-menu-button {
+            display: block;
+          }
+        }
+      }
+
+      .main {
+        #logo {
+          .section-right {
+            .second-row {
+              flex-direction: column;
+              gap: 40px;
+            }
+          }
+        }
+
+        #color {
+          .section-right {
+
+            .section-color {
+              display: grid;
+              // min-width: 580px;
+              // min-height: 400px;
+              grid-template-columns: auto;
+            }
+
+            #card-orange {
+              border-radius: 16px 16px 0 0;
+            }
+
+            #card-black {
+              border-radius: 0 0 16px 16px;
+            }
+          }
+        }
+
+        #social-media {
+          #phone-wallpaper {
+            .section-phone {
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+
+              .logo {
+                width: 300px;
+                margin: 0 auto;
+              }
+
+              #left-phone {
+                .logo {
+                  border-radius: 0;
+                }
+              }
+
+              #middle-phone {
+                .logo {
+                  border: 1px solid $primary-color;
+                }
+              }
+
+              #right-phone {
+                .logo {
+                  border-radius: 0;
+                }
+              }
+
+            }
+          }
+        }
+      }
+
+      footer {
+        .footer-container {
+          padding-bottom: 90px;
         }
       }
     }
